--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
         <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.png" alt="" width="30" height="24">
+            </a>
             <a class="navbar-brand" href="#" style="font-size: 24px;">ReStart</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,6 +74,7 @@
             </defs>
         </svg>
     </div>
+    <button class="custom-btn btn-14">Set Goals</button>
     <script src="index.js"></script>
 </body>
 
